<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>smu</groupId>
  <artifactId>Progetto-OO</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>Progetto-OO</name>
  <url>http://maven.apache.org</url>


    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.7.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.7.0</version>
            <scope>test</scope>
        </dependency>

        <!-- Altre dipendenze -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>23</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>23</version>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.6.0</version>
        </dependency>
    </dependencies>


  <build>
      <plugins>
          <!-- Plugin per eseguire il programma Maven -->
          <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>3.1.0</version>
          <configuration>
                <mainClass>smu.Main</mainClass>
                <arguments>
                  <argument>--add-modules</argument>
                  <argument>javafx.controls,javafx.fxml</argument>
                  <argument>-Dprism.order=sw</argument>
                  <argument>-Djavafx.embed.singleThread=true</argument>
                  <argument>-XstartOnFirstThread</argument>
                </arguments>
          </configuration>
              <executions>
                <execution>
                <goals>
                    <goal>java</goal>
                </goals>
                </execution>
              </executions>
          </plugin>


          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-compiler-plugin</artifactId>
              <version>3.8.1</version>
              <configuration>
                  <source>23</source>
                  <target>23</target>
              </configuration>
          </plugin>
          <plugin>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-maven-plugin</artifactId>
              <version>0.0.8</version> <!-- Versione del plugin -->
              <executions>
                  <execution>
                      <goals>
                          <goal>run</goal>
                      </goals>
                  </execution>
              </executions>
              <configuration>
                  <mainClass>smu.Main</mainClass> <!-- Classe principale -->
              </configuration>
          </plugin>
      </plugins>

    <resources>
    <resource>
      <directory>src/main/resources</directory>
        </resource>
    </resources>
    </build>

</project>
